# Lectures

Lecture-1/: main.py
Lecture-2/: branching.py  fancy.py  main.py  operation.py  pyproject.toml  task.ipynb  task.py
Lecture-3/: main.py  pyproject.toml  task.ipynb  task.py  test.py
Lecture-4/: funcs.py  main.py  pyproject.toml  task.ipynb  task.py
Lecture-5/: func.py  main.py  my_function.py  pyproject.toml  task.py  task1.ipynb  task2.ipynb  task_1.py  task_2.ipynb
Lecture-6/: main.py  pyproject.toml  task.ipynb  task.py
Lecture-7/: complex.py  main.py  pyproject.toml  task.ipynb  task.py
Lecture-9/: pyproject.toml  task.ipynb
Lecture-a/: key.txt  main.py  open_ai.ipynb  pyproject.toml
Lecture-a/my_package/: pyproject.toml
Lecture-a/my_package/src/my_package/models/: user.py
Lecture-b/: main.py  pyproject.toml
test-github/: LICENSE  README.md
